change package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ng2-font-awesome",
+  "name": "angular2-font-awesome",
   "version": "1.0.0-alpha.0",
   "description": "",
   "main": "index.js",
