--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ng2-font-awesome",
+  "name": "angular2-font-awesome",
   "version": "1.0.0-alpha.0",
   "description": "",
   "main": "index.js",
@@ -25,10 +25,10 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "git+ssh://git@github.com:baruchvlz/ng2-font-awesome.git"
+    "url": "git+ssh://git@github.com:baruchvlz/angular2-font-awesome.git"
   },
   "bugs": {
-    "url": "https://github.com/baruchvlz/ng2-font-awesome/issues"
+    "url": "https://github.com/baruchvlz/angular2-font-awesomee/issues"
   },
   "peerDependencies": {
     "@angular/core": "^2.4.1",
