update package version

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "angular2-font-awesome",
-  "version": "1.0.0-alpha.1",
+  "version": "1.0.0-alpha.1-1",
   "description": "",
   "main": "index.js",
   "scripts": {
