--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,11 @@ manifest.mf
 build.xml
 node_modules/*
 npm-debug.log
-*.js
+src/*.js
+tests/*.js
+angular2-font-awesome.js
+index.js
+dist/
 !config/*
 !karma.conf.js
 !webpack.config.js
