chore(updates) moved demo to own folder with cli inside, adjusments done to package

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0-alpha.1-4",
   "description": "",
   "main": "index.js",
+  "typings": "index.d.ts",
   "scripts": {
     "start": "",
     "test": "karma start --singleRun=true",
