chore(npmignore) keep demo folder outside of package

--- a/.npmignore
+++ b/.npmignore
@@ -24,6 +24,11 @@ coverage
 bundles
 
 ############
+## No need or demo folder to be part of NPM
+############
+demo/
+
+############
 ## Windows
 ############
 
