--- a/demo/package.json
+++ b/demo/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "^3.3.1",
     "angular2-font-awesome": "^1.0.0-alpha.1-4",
     "core-js": "^2.4.1",
+    "font-awesome": "^4.7.0",
     "rxjs": "^5.0.1",
     "ts-helpers": "^1.1.1",
     "zone.js": "^0.7.2"
