--- a/demo/package.json
+++ b/demo/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "^2.3.1",
     "@angular/router": "^3.3.1",
     "angular2-font-awesome": "^1.0.0-alpha.1-4",
+    "font-awesome": "^4.7.0",
     "core-js": "^2.4.1",
     "rxjs": "^5.0.1",
     "ts-helpers": "^1.1.1",
