chore: update package version for npm

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "angular2-font-awesome",
-  "version": "1.0.0-alpha.2",
+  "version": "1.1.0",
   "description": "",
   "main": "index.js",
   "typings": "index.d.ts",
