--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "angular2-font-awesome",
   "version": "1.1.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.ts",
   "typings": "index.d.ts",
   "scripts": {
     "start": "",
