--- a/package.json
+++ b/package.json
@@ -46,17 +46,17 @@
     "font-awesome": "^4.7.0"
   },
   "devDependencies": {
-    "@angular/common": "4.0.0",
-    "@angular/compiler": "4.0.0",
-    "@angular/compiler-cli": "4.0.0",
-    "@angular/core": "4.0.0",
-    "@angular/http": "4.0.0",
-    "@angular/platform-browser": "4.0.0",
-    "@angular/platform-browser-dynamic": "4.0.0",
-    "@angular/platform-server": "4.0.0",
+    "@angular/common": "^2.4.2 || ^4.0.1",
+    "@angular/compiler": "^2.4.2 || ^4.0.1",
+    "@angular/compiler-cli": "^2.4.2 || ^4.0.1",
+    "@angular/core": "^2.4.2 || ^4.0.1",
+    "@angular/http": "^2.4.2 || ^4.0.1",
+    "@angular/platform-browser": "^2.4.2 || ^4.0.1",
+    "@angular/platform-browser-dynamic": "^2.4.2 || ^4.0.1",
+    "@angular/platform-server": "^2.4.2 || ^4.0.1",
     "@types/hammerjs": "2.0.33",
-    "@types/jasmine": "2.5.38",
-    "@types/node": "6.0.52",
+    "@types/jasmine": "2.5.45",
+    "@types/node": "6.0.60",
     "awesome-typescript-loader": "3.0.0-beta.17",
     "codelyzer": "2.0.0-beta.3",
     "commitizen": "2.9.2",
