--- a/package.json
+++ b/package.json
@@ -46,14 +46,14 @@
     "font-awesome": "^4.7.0"
   },
   "devDependencies": {
-    "@angular/common": "^2.4.2 || ^4.0.1",
-    "@angular/compiler": "^2.4.2 || ^4.0.1",
-    "@angular/compiler-cli": "^2.4.2 || ^4.0.1",
-    "@angular/core": "^2.4.2 || ^4.0.1",
-    "@angular/http": "^2.4.2 || ^4.0.1",
-    "@angular/platform-browser": "^2.4.2 || ^4.0.1",
-    "@angular/platform-browser-dynamic": "^2.4.2 || ^4.0.1",
-    "@angular/platform-server": "^2.4.2 || ^4.0.1",
+    "@angular/common": "^4.3.3",
+    "@angular/compiler": "^4.3.3",
+    "@angular/compiler-cli": "^4.3.3",
+    "@angular/core": "^4.3.3",
+    "@angular/http": "^4.3.3",
+    "@angular/platform-browser": "^4.3.3",
+    "@angular/platform-browser-dynamic": "^4.3.3",
+    "@angular/platform-server": "^4.3.3",
     "@types/hammerjs": "2.0.33",
     "@types/jasmine": "2.5.45",
     "@types/node": "6.0.60",
