--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "url": "https://github.com/baruchvlz/angular2-font-awesome/issues"
   },
   "peerDependencies": {
-    "@angular/core": "^2.4.2 || ^4.0.1",
+    "@angular/core": "4.3.3",
     "font-awesome": "^4.7.0"
   },
   "dependencies": {
