--- a/.gitignore
+++ b/.gitignore
@@ -2,26 +2,7 @@
 ## Misc
 #################
 **/.DS_Store
-nbproject
-manifest.mf
-build.xml
-node_modules/*
-npm-debug.log
-src/*.js
-tests/*.js
-angular2-font-awesome.js
-index.js
-dist/
-!config/*
-!karma.conf.js
-!webpack.config.js
-*.map
-*.d.ts
-!make.js
-!examples/**/*.js
-coverage
-*.metadata.json
-bundles
+node_modules/
 
 ############
 ## Windows
@@ -39,3 +20,8 @@ Desktop.ini
 
 # Mac crap
 .DS_Store
+
+##############
+## TypeScript
+##############
+*.d.ts
