--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "angular-font-awesome",
-  "version": "2.0.2",
+  "version": "2.1.0",
   "description": "Compact FontAwesome library ready to be used with Angular 2 & 4. Formerly known as angular2-font-awesome",
-  "main": "index.ts",
-  "typings": "index.d.ts",
+  "main": "dist/index.js",
   "scripts": {
     "start": "",
     "test": "echo \"Package test are ran inside 'demo'\" && exit 1",
-    "test:dev": "karma start --singleRun=false --autoWatch=true"
+    "test:dev": "karma start --singleRun=false --autoWatch=true",
+    "build" : "cross-env BUILD_ENV=prod webpack"
   },
   "keywords": [
     "ng4-font-awesome",
@@ -36,7 +36,7 @@
     "url": "git+ssh://git@github.com:baruchvlz/angular-font-awesome.git"
   },
   "bugs": {
-    "url": "https://github.com/baruchvlz/angular2-font-awesome/issues"
+    "url": "https://github.com/baruchvlz/angular-font-awesome/issues"
   },
   "peerDependencies": {
     "@angular/core": "4.3.3",
@@ -61,6 +61,7 @@
     "codelyzer": "2.0.0-beta.3",
     "commitizen": "2.9.2",
     "core-js": "2.4.1",
+    "cross-env": "^5.0.5",
     "cz-conventional-changelog": "1.2.0",
     "istanbul-instrumenter-loader": "0.2.0",
     "jasmine-core": "2.5.2",
@@ -78,10 +79,11 @@
     "semantic-release": "6.3.2",
     "source-map-loader": "0.1.5",
     "ts-helpers": "1.1.2",
+    "ts-loader": "^2.3.2",
     "tslint": "4.0.2",
     "tslint-loader": "3.3.0",
     "typescript": "2.0.10",
-    "webpack": "2.1.0-beta.27",
+    "webpack": "^2.1.0-beta.27",
     "zone.js": "0.7.2"
   }
 }
