--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "",
     "test": "echo \"Package test are ran inside 'demo'\" && exit 1",
     "test:dev": "karma start --singleRun=false --autoWatch=true",
-    "build" : "cross-env BUILD_ENV=prod webpack"
+    "build": "cross-env BUILD_ENV=prod webpack"
   },
   "keywords": [
     "ng4-font-awesome",
@@ -39,13 +39,10 @@
     "url": "https://github.com/baruchvlz/angular-font-awesome/issues"
   },
   "peerDependencies": {
-    "@angular/core": "4.3.3",
     "font-awesome": "^4.7.0"
   },
   "dependencies": {
-    "font-awesome": "^4.7.0"
-  },
-  "devDependencies": {
+    "@angular/animations": "^4.3.3",
     "@angular/common": "^4.3.3",
     "@angular/compiler": "^4.3.3",
     "@angular/compiler-cli": "^4.3.3",
@@ -54,10 +51,14 @@
     "@angular/platform-browser": "^4.3.3",
     "@angular/platform-browser-dynamic": "^4.3.3",
     "@angular/platform-server": "^4.3.3",
+    "rxjs": "^5.4.2",
+    "zone.js": "^0.8.16"
+  },
+  "devDependencies": {
     "@types/hammerjs": "2.0.33",
     "@types/jasmine": "2.5.45",
     "@types/node": "6.0.60",
-    "awesome-typescript-loader": "3.0.0-beta.17",
+    "awesome-typescript-loader": "^3.2.2",
     "codelyzer": "2.0.0-beta.3",
     "commitizen": "2.9.2",
     "core-js": "2.4.1",
@@ -75,15 +76,12 @@
     "karma-webpack": "1.8.0",
     "loader-utils": "0.2.16",
     "reflect-metadata": "0.1.8",
-    "rxjs": "5.0.0-rc.4",
     "semantic-release": "6.3.2",
     "source-map-loader": "0.1.5",
     "ts-helpers": "1.1.2",
-    "ts-loader": "^2.3.2",
     "tslint": "4.0.2",
     "tslint-loader": "3.3.0",
-    "typescript": "2.0.10",
-    "webpack": "^2.1.0-beta.27",
-    "zone.js": "0.7.2"
+    "typescript": "^2.4.2",
+    "webpack": "^2.1.0-beta.27"
   }
 }
