--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,8 @@
       "node"
     ],
     "lib": ["es2015", "dom"],
-    "sourceMap": true
+    "sourceMap": true,
+    "removeComments": true
   },
   "files": [
     "index.ts",
