rollback to working branch

--- a/demo/package.json
+++ b/demo/package.json
@@ -21,7 +21,7 @@
     "@angular/platform-browser": "^2.3.1",
     "@angular/platform-browser-dynamic": "^2.3.1",
     "@angular/router": "^3.3.1",
-    "angular-font-awesome": "^2.0.2",
+    "angular-font-awesome": "git+https://github.com/baruchvlz/angular-font-awesome.git#fix/missing",
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
     "rxjs": "^5.0.1",
