Compiled version, ready to use on ionic.

--- a/.gitignore
+++ b/.gitignore
@@ -9,13 +9,13 @@ node_modules/*
 npm-debug.log
 src/*.js
 tests/*.js
-angular2-font-awesome.js
-index.js
+#angular2-font-awesome.js
+#index.js
 dist/
 !config/*
 !karma.conf.js
 !webpack.config.js
-*.map
+#*.map
 *.d.ts
 !make.js
 !examples/**/*.js
