chore: include .js, .map, .d.ts files in the npm package but not to github

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.ts",
   "typings": "index.d.ts",
   "scripts": {
-    "start": "",
+    "start": "tsc",
     "test": "echo \"Package test are ran inside 'demo'\" && exit 1",
     "test:dev": "karma start --singleRun=false --autoWatch=true"
   },
