--- a/.gitignore
+++ b/.gitignore
@@ -9,8 +9,6 @@ node_modules/*
 npm-debug.log
 src/*.js
 tests/*.js
-angular2-font-awesome.js
-index.js
 dist/
 !config/*
 !karma.conf.js
@@ -39,3 +37,9 @@ Desktop.ini
 
 # Mac crap
 .DS_Store
+
+###
+## Git Only Ignores
+###
+lib/angular-font-awesome.component.js
+index.js
