--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "start": "tsc",
     "test": "echo \"Package test are ran inside 'demo'\" && exit 1",
-    "test:dev": "karma start --singleRun=false --autoWatch=true"
+    "test:dev": "karma start --singleRun=false --autoWatch=true",
+    "prepublish": "npm run start"
   },
   "keywords": [
     "ng4-font-awesome",
