--- a/package.json
+++ b/package.json
@@ -43,9 +43,7 @@
     "font-awesome": "^4.7.0"
   },
   "dependencies": {
-    "font-awesome": "^4.7.0",
-    "@types/hammerjs": "2.0.33",
-    "@types/rx": "^4.1.1"
+    "font-awesome": "^4.7.0"
   },
   "devDependencies": {
     "@angular/common": "^2.4.2 || ^4.0.1",
@@ -62,6 +60,8 @@
     "codelyzer": "2.0.0-beta.3",
     "commitizen": "2.9.2",
     "core-js": "2.4.1",
+    "@types/hammerjs": "2.0.33",
+    "@types/rx": "^4.1.1",
     "cz-conventional-changelog": "1.2.0",
     "istanbul-instrumenter-loader": "0.2.0",
     "jasmine-core": "2.5.2",
