--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
     "publisher": "npm run build && npm publish dist/"
   },
   "peerDependencies": {
-    "@angular/core": ">=4.0.0 <5.0.0 || >=4.0.0-beta <5.0.0",
+    "@angular/core": ">=2.0.0 || >=4.0.0 || >=5.0.0",
     "font-awesome": "^4.7.0"
   },
   "devDependencies": {
