--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "angular-font-awesome",
-  "version": "3.1.1-test",
+  "version": "3.1.1",
   "description": "Compact FontAwesome library ready to be used with Angular.",
   "main": "./dist/bundles/angular-font-awesome.umd.js",
   "module": "./dist/angular-font-awesome.es5.js",
